[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/ui/general_dialog.gd" type="Script" id=1]
[ext_resource path="res://resources/dialogbg2.png" type="Texture" id=2]
[ext_resource path="res://resources/fonts/Comfortaa-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resources/button_style.tres" type="StyleBox" id=4]
[ext_resource path="res://resources/warning_icon.png" type="Texture" id=5]
[ext_resource path="res://resources/green_button_style.tres" type="StyleBox" id=6]
[ext_resource path="res://resources/info_icon.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 20
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 28
use_filter = true
extra_spacing_top = 4
font_data = ExtResource( 3 )

[node name="ColorRect" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.840881
margin_top = 0.0670163
margin_right = -0.840881
margin_bottom = 0.0670166
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control"]
margin_left = 238.0
margin_top = 157.0
margin_right = 786.0
margin_bottom = 443.0
rect_min_size = Vector2( 548, 0 )
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="NinePatchRect" type="NinePatchRect" parent="Control/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 528.0
margin_bottom = 266.0
texture = ExtResource( 2 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 17
patch_margin_bottom = 17

[node name="ColorRect" type="ColorRect" parent="Control/MarginContainer"]
visible = false
margin_left = 20.0
margin_top = 20.0
margin_right = 528.0
margin_bottom = 266.0
color = Color( 0.176471, 0.0470588, 0.211765, 1 )

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 528.0
margin_bottom = 266.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 483.0
margin_bottom = 221.0

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
margin_right = 458.0
margin_bottom = 136.0
custom_constants/margin_bottom = 35

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 458.0
margin_bottom = 101.0
custom_constants/separation = 25

[node name="CenterContainer" type="CenterContainer" parent="Control/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 101.0

[node name="InfoIcon" type="TextureRect" parent="Control/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/CenterContainer"]
margin_top = 18.0
margin_right = 64.0
margin_bottom = 82.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="WarningIcon" type="TextureRect" parent="Control/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
visible = false
margin_left = 95.0
margin_right = 165.0
margin_bottom = 49.0
rect_min_size = Vector2( 70, 0 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="Label3" type="Label" parent="Control/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 89.0
margin_right = 458.0
margin_bottom = 101.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Dialog Description is a bit longer ok Dialog Description is a bit longer ok Dialog Description is a bit longer ok"
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 458.0
margin_bottom = 196.0
alignment = 2

[node name="NoButton" type="Button" parent="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 130.0
margin_bottom = 56.0
rect_min_size = Vector2( 130, 56 )
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.333333, 0.384314, 0.439216, 1 )
custom_colors/font_color_hover = Color( 0.298039, 0.345098, 0.392157, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "No"

[node name="Control" type="Control" parent="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 134.0
margin_right = 190.0
margin_bottom = 56.0
size_flags_horizontal = 3

[node name="OKButton" type="Button" parent="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 194.0
margin_right = 324.0
margin_bottom = 56.0
rect_min_size = Vector2( 130, 56 )
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.333333, 0.384314, 0.439216, 1 )
custom_colors/font_color_hover = Color( 0.298039, 0.345098, 0.392157, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Ok"

[node name="YesButton" type="Button" parent="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 328.0
margin_right = 458.0
margin_bottom = 56.0
rect_min_size = Vector2( 130, 56 )
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.333333, 0.384314, 0.439216, 1 )
custom_colors/font_color_hover = Color( 0.298039, 0.345098, 0.392157, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Yes"
